--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "focus-trap-react": "^8.9.2",
+    "primeicons": "^5.0.0",
+    "primereact": "^7.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
